@@ -1,6 +1,8 @@
 2010-04-01 Ian Rutt
  * libglide/glide_thck.F90: reformatted generate_row
  * libglide/glide_thck.F90: refactor thck_evolve
+ * libglide/glide_thck.F90: linear solve now uses same subroutine as non-linear. 
+   Code still needs renaming and reorganising, though.
 
 2010-03-29 Magnus Hagdorn
  * libglide/glide.F90: use new API
